[workspace]
members = ["duration-human", "clap-duration"]

[package]
name = "token_server"
description = "Server to provide one-time access tokens for some set of meta data"
version = "0.1.8"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/HaKr/token_server.git"
readme = "README.md"

[dependencies]
duration-human = { path = "./duration-human", version = "0.1.6" }
clap-duration = { path = "./clap-duration", version = "0.1.6" }

tokio = { version = "1.19", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["fs", "trace", "set-header"] }
axum = { version = "0.6", features = ["multipart", "headers"] }
axum-macros = "0.3"
url = { version = "2.3", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
thiserror = "1.0"
lazy-regex = "2.3"

[dependencies.uuid]
version = "1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
