[package]
name = "clap-duration"
description = "Macros for clap argument value_parse"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/HaKr/token_server/tree/main/clap-duration"
license-file = "LICENSE"
readme = "README.md"


[lib]
proc-macro = true

[dependencies]
duration-human = { path = "../duration-human", version = "0.1.7" }
thiserror = "1.0"
syn = "1.0"
quote = "1.0"
clap = "4.0"
