[package]
name = "duration-human"
description = "Duration wrapper to interact with humans"
version = "0.1.10"
edition = "2021"
repository = "https://github.com/HaKr/token_server/tree/main/duration-human"
license-file = "LICENSE"
readme = "README.md"
keywords = ["macro", "duration", "human-friendly", "parser"]
categories = ["date-and-time"]

[dependencies]
thiserror = "1.0"
syn = "1.0"
lazy-regex = "2.3"
clap = { version = "4.0", features = ["derive", "string"] }
regex = "1.7"
