[package]
name = "duration_in_ms"
description = "Duration defined in millisecond precision"
version = "0.1.1"
edition = "2021"

[lib]

[dependencies]
thiserror = "1.0"
lazy-regex = "2.3"
clap = { version = "4.0", features = ["derive", "string"] }
syn = "1.0"
duration_in_ms_macro = { path = "macro" }
duration_in_ms_api = { path = "api" }
