[package]
name = "duration_in_ms"
description = "Duration defined in millisecond precision"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/HaKr/token_server/tree/main/duration_in_ms"
license-file = "LICENSE"
readme = "README.md"


[dependencies]
thiserror = "1.0"
syn = "1.0"
lazy-regex = "2.3"
clap = { version = "4.0", features = ["derive", "string"] }
