[package]
name = "duration_in_ms_macros"
description = "Macros for the duration_in_ms package"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/HaKr/token_server/tree/main/duration_in_ms_macros"
license-file = "LICENSE"
readme = "README.md"


[lib]
proc-macro = true

[dependencies]
duration_in_ms = { path = "../duration_in_ms", version = "0.1" }
thiserror = "1.0"
syn = "1.0"
quote = "1.0"
